--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -21,25 +21,14 @@ jobs:
       - name: Check docker images
         run: docker images
 
-      - name: Initial a kube config file.
-        run: |
-          touch "${GITHUB_WORKSPACE}"/kind-kube.config
-
-      - name: Create a cluster
-        id: kind-env
-        uses: rockyhmchen/gh-actions-kind-env@master
+      - name: Setup kind and create cluster
+        uses: rockyhmchen/gh-actions-kind-env@js-ver
         with:
           kind-version: "v0.5.1"
-          kubeconfig-file: "kind-kube.config"
-
-      - name: Set KUBECONFIG
-        run: |
-          export KUBECONFIG="${GITHUB_WORKSPACE}"/kind-kube.config
-          echo $PATH
 
       - name: Load docker image
         run: |
-          scripts/2_load_docker_images.sh "${GITHUB_WORKSPACE}"/kind
+          scripts/2_load_docker_images.sh
 
       - name: Create an integration test environment
         run: |
