--- a/e2e/src/test/resources/k8s/kafka.yaml
+++ b/e2e/src/test/resources/k8s/kafka.yaml
@@ -71,16 +71,16 @@ spec:
                   fieldPath: metadata.name
             - name: KAFKA_PORT
               value: "9092"
-            - name: KAFKA_PORT_NUMBER
-              value: "9092"
+            #            - name: KAFKA_PORT_NUMBER
+            #              value: "9092"
             #            - name: KAFKA_ADVERTISED_PORT
             #              value: "30000"
             #            - name: KAFKA_ADVERTISED_HOST_NAME
             #              value: "172.27.172.79"
             - name: KAFKA_LISTENERS
-              value: PLAINTEXT://:$(KAFKA_PORT_NUMBER)
+              value: PLAINTEXT://:$(KAFKA_PORT)
             - name: KAFKA_ADVERTISED_LISTENERS
-              value: PLAINTEXT://$(MY_POD_NAME).kafka-headless.itest.svc.cluster.local:$(KAFKA_PORT_NUMBER)
+              value: PLAINTEXT://$(MY_POD_NAME).kafka-headless.itest.svc.cluster.local:$(KAFKA_PORT)
             - name: ALLOW_PLAINTEXT_LISTENER
               value: "yes"
             - name: KAFKA_ZOOKEEPER_CONNECT
