--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -41,7 +41,8 @@ jobs:
           kubefwd-version: "v1.9.2"
 
       - name: Port-forward
-        run: scripts/5_kubefwd_kind.sh
+        #        run: scripts/5_kubefwd_kind.sh
+        run: sudo kubefwd svc -n itest
 
       - name: Run integration tests
         run: ./mvnw clean verify -pl 'e2e'
