--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -7,42 +7,49 @@ jobs:
 
     steps:
 
-      - name: Check out code
-        uses: actions/checkout@v1
+      - name: sudo version
+        run: sudo --version
 
-      - name: Set up JDK 11.0.2
-        uses: actions/setup-java@v1
-        with:
-          java-version: '11.0.2'
+      - name: ls hosts
+        run: ls /etc/hosts
+        
 
-      - name: Build, run unit and component tests
-        run: ./mvnw clean verify -pl '!e2e'
-
-      - name: Check docker images
-        run: docker images
-
-      - name: Setup kind and create cluster
-        uses: rockyhmchen/gh-actions-kind-env@js-ver
-        with:
-          kind-version: "v0.5.1"
-
-      - name: Load docker image
-        run: |
-          scripts/2_load_docker_images.sh
-
-      - name: Create an integration test environment
-        run: |
-          scripts/3_set_image.sh
-          scripts/4_startup.sh
-
-      - name: Setup kubefwd
-        uses: rockyhmchen/gh-actions-setup-kubefwd@master
-        with:
-          kubefwd-version: "v1.9.2"
-
-      - name: Port-forward
-        #        run: scripts/5_kubefwd_kind.sh
-        run: sudo kubefwd svc -n itest
-
-      - name: Run integration tests
-        run: ./mvnw clean verify -pl 'e2e'
+#      - name: Check out code
+#        uses: actions/checkout@v1
+#
+#      - name: Set up JDK 11.0.2
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: '11.0.2'
+#
+#      - name: Build, run unit and component tests
+#        run: ./mvnw clean verify -pl '!e2e'
+#
+#      - name: Check docker images
+#        run: docker images
+#
+#      - name: Setup kind and create cluster
+#        uses: rockyhmchen/gh-actions-kind-env@js-ver
+#        with:
+#          kind-version: "v0.5.1"
+#
+#      - name: Load docker image
+#        run: |
+#          scripts/2_load_docker_images.sh
+#
+#      - name: Create an integration test environment
+#        run: |
+#          scripts/3_set_image.sh
+#          scripts/4_startup.sh
+#
+#      - name: Setup kubefwd
+#        uses: rockyhmchen/gh-actions-setup-kubefwd@master
+#        with:
+#          kubefwd-version: "v1.9.2"
+#
+#      - name: Port-forward
+#        #        run: scripts/5_kubefwd_kind.sh
+#        run: sudo kubefwd svc -n itest
+#
+#      - name: Run integration tests
+#        run: ./mvnw clean verify -pl 'e2e'
