--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -12,8 +12,8 @@ jobs:
         with:
           kubefwd-version: "v1.9.2"
 
-      - name: kubefwd version
-        run: kubefwd --version
+      #      - name: kubefwd version
+      #        run: kubefwd --version
 
       - name: which kubefwd
         run: which kubefwd
