--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -7,72 +7,71 @@ jobs:
 
     steps:
 
+      #      - name: Setup kubefwd
+      #        uses: rockyhmchen/gh-actions-setup-kubefwd@master
+      #        with:
+      #          kubefwd-version: "v1.9.2"
+      #
+      #      #      - name: kubefwd version
+      #      #        run: kubefwd --version
+      #
+      #      - name: which kubefwd
+      #        run: which kubefwd
+      #
+      #      - name: sudo version
+      #        run: sudo --version
+      #
+      #      - name: which sudo
+      #        run: which sudo
+      #
+      #      - name: ls hosts
+      #        run: ls /etc/hosts
+      #
+      #      - name: cat hosts
+      #        run: cat /etc/hosts
+      #
+      #      - name: sudo kubefwd 1
+      #        run: sudo -u root /opt/hostedtoolcache/kubefwd/1.9.2/x64/kubefwd
+      #
+      #      - name: sudo kubefwd 2
+      #        run: sudo -u root kubefwd
+
+
+      - name: Check out code
+        uses: actions/checkout@v1
+
+      - name: Set up JDK 11.0.2
+        uses: actions/setup-java@v1
+        with:
+          java-version: '11.0.2'
+
+      - name: Build, run unit and component tests
+        run: ./mvnw clean verify -pl '!e2e'
+
+      - name: Check docker images
+        run: docker images
+
+      - name: Setup kind and create cluster
+        uses: rockyhmchen/gh-actions-kind-env@js-ver
+        with:
+          kind-version: "v0.5.1"
+
+      - name: Load docker image
+        run: |
+          scripts/2_load_docker_images.sh
+
+      - name: Create an integration test environment
+        run: |
+          scripts/3_set_image.sh
+          scripts/4_startup.sh
+
       - name: Setup kubefwd
         uses: rockyhmchen/gh-actions-setup-kubefwd@master
         with:
           kubefwd-version: "v1.9.2"
 
-      #      - name: kubefwd version
-      #        run: kubefwd --version
+      - name: Port-forward
+        run: sudo -u root /opt/hostedtoolcache/kubefwd/1.9.2/x64/kubefwd svc -n itest
 
-      - name: which kubefwd
-        run: which kubefwd
-
-      - name: sudo version
-        run: sudo --version
-
-      - name: which sudo
-        run: which sudo
-
-      - name: ls hosts
-        run: ls /etc/hosts
-
-      - name: cat hosts
-        run: cat /etc/hosts
-
-      - name: sudo kubefwd 1
-        run: sudo -u root /opt/hostedtoolcache/kubefwd/1.9.2/x64/kubefwd
-
-      - name: sudo kubefwd 2
-        run: sudo -u root kubefwd
-
-
-#      - name: Check out code
-#        uses: actions/checkout@v1
-#
-#      - name: Set up JDK 11.0.2
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: '11.0.2'
-#
-#      - name: Build, run unit and component tests
-#        run: ./mvnw clean verify -pl '!e2e'
-#
-#      - name: Check docker images
-#        run: docker images
-#
-#      - name: Setup kind and create cluster
-#        uses: rockyhmchen/gh-actions-kind-env@js-ver
-#        with:
-#          kind-version: "v0.5.1"
-#
-#      - name: Load docker image
-#        run: |
-#          scripts/2_load_docker_images.sh
-#
-#      - name: Create an integration test environment
-#        run: |
-#          scripts/3_set_image.sh
-#          scripts/4_startup.sh
-#
-#      - name: Setup kubefwd
-#        uses: rockyhmchen/gh-actions-setup-kubefwd@master
-#        with:
-#          kubefwd-version: "v1.9.2"
-#
-#      - name: Port-forward
-#        #        run: scripts/5_kubefwd_kind.sh
-#        run: sudo kubefwd svc -n itest
-#
-#      - name: Run integration tests
-#        run: ./mvnw clean verify -pl 'e2e'
+      - name: Run integration tests
+        run: ./mvnw clean verify -pl 'e2e'
