--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -6,37 +6,6 @@ jobs:
     name: Build and Test
 
     steps:
-
-      #      - name: Setup kubefwd
-      #        uses: rockyhmchen/gh-actions-setup-kubefwd@master
-      #        with:
-      #          kubefwd-version: "v1.9.2"
-      #
-      #      #      - name: kubefwd version
-      #      #        run: kubefwd --version
-      #
-      #      - name: which kubefwd
-      #        run: which kubefwd
-      #
-      #      - name: sudo version
-      #        run: sudo --version
-      #
-      #      - name: which sudo
-      #        run: which sudo
-      #
-      #      - name: ls hosts
-      #        run: ls /etc/hosts
-      #
-      #      - name: cat hosts
-      #        run: cat /etc/hosts
-      #
-      #      - name: sudo kubefwd 1
-      #        run: sudo -u root /opt/hostedtoolcache/kubefwd/1.9.2/x64/kubefwd
-      #
-      #      - name: sudo kubefwd 2
-      #        run: sudo -u root kubefwd
-
-
       - name: Check out code
         uses: actions/checkout@v1
 
@@ -71,7 +40,18 @@ jobs:
           kubefwd-version: "v1.9.2"
 
       - name: Port-forward
-        run: sudo -u root /opt/hostedtoolcache/kubefwd/1.9.2/x64/kubefwd svc -n itest &
+        run: sudo -u root scripts/5_kubefwd_kind.sh /opt/hostedtoolcache/kubefwd/1.9.2/x64/kubefwd &
 
       - name: Run integration tests
         run: ./mvnw clean verify -pl 'e2e'
+
+      - name: Package
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          TAG=$(echo ${GITHUB_REF} | cut -d'/' -f3)
+          docker login docker.pkg.github.com --username ${DOCKER_USER} --password ${DOCKER_PASSWORD}
+          docker tag com.rc/magnesium:DEV docker.pkg.github.com/${GITHUB_REPOSITORY}/magnesium:$TAG
+          docker push docker.pkg.github.com/${GITHUB_REPOSITORY}/magnesium:$TAG
